# ECE522

./: .gitignore  README.md
lab1/d1/: Cargo.toml
lab1/lab1b/: Cargo.toml
lab1/lab1b/src/: fun1.rs  main.rs
lab1/lab1deliverable2/: Cargo.toml
lab1/lab1deliverable2/src/: main.rs
lab2/lab2q2/: Cargo.toml
lab2/lab2q2/src/: main.rs
lab2/lab2q3/: Cargo.toml
lab2/lab2q3/src/: main.rs
lab2/lab2q4/: Cargo.toml
lab2/lab2q4/src/: main.rs
lab3/part1/: Cargo.toml
lab3/part1/benches/: my_benchmark.rs
lab3/part1/src/: lib.rs  main.rs
lab3/part2/: Cargo.toml
lab3/part2/benches/: my_benchmark.rs
lab3/part2/src/: lib.rs  main.rs
lab3/part3/: Cargo.toml
lab3/part3/data/: users.db
lab3/part3/src/: main.rs
lab4/part1/: Cargo.toml
lab4/part1/src/: main.rs
lab4/part2/: Cargo.toml
lab4/part2/benches/: my_benchmark.rs
lab4/part2/src/: lib.rs  main.rs
lab4/part3/: Cargo.toml
lab4/part3/src/: main.rs
lab4/part3q11/: Cargo.toml
lab4/part3q11/src/: main.rs
lab4/part3q12/: Cargo.toml
lab4/part3q12/src/: main.rs
lab5/part1/: q1.wat
lab5/part2/: Cargo.toml
lab5/part2/wasm-is-prime/: Cargo.toml
lab5/part2/wasm-is-prime/pkg/: package.json  wasm_is_prime.js  wasm_is_prime_bg.js  wasm_is_prime_bg.wasm
lab5/part2/wasm-is-prime/src/: lib.rs
lab5/part2/wasm-is-prime/www/: index.js  package.json
lab5/part3/wasm-is-prime/: Cargo.toml  LICENSE_MIT
lab5/part3/wasm-is-prime/pkg/: wasm_is_prime.d.ts  wasm_is_prime_bg.js  wasm_is_prime_bg.wasm  wasm_is_prime_bg.wasm.d.ts
lab5/part3/wasm-is-prime/src/: lib.rs
(+3 files in other folders)
