[package]
name = "lab1b"
version = "0.1.0"
authors = ["Amina Eltahir <amina.a.ibrahim22@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.0"
num = "0.3.0"
num-primes = "0.1.1"
num-bigint = "0.3.0"
primal = "0.3.0"
apint = "0.2.0"
ramp = "0.5.9"

