[package]
name = "part2"
version = "0.1.0"
authors = ["Amina Eltahir <amina.a.ibrahim22@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false

# [[bin]]
# name = "lib"
# path = "src/lib.rs"
