[package]
name = "part3"
version = "0.1.0"
authors = ["Amina Eltahir <amina.a.ibrahim22@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
image = "0.23.11"
num = "0.3.1"
num_cpus = "1.13.0"
threadpool = "1.8.1"

